# erra

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: overhead.rs
src/: error.rs  ext.rs  lib.rs
tests/: basic.rs  chaining.rs  no_std_static.rs  type_checks.rs
