[package]
name          = "erra"
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.65.0"
authors       = ["Zaud Rehman"]
description   = "Zero-dependency, type-preserving error annotation for Result"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ZaudRehman/erra"
documentation = "https://docs.rs/erra"
keywords      = ["error", "context", "result", "no-std", "ergonomics"]
categories    = ["rust-patterns", "no-std", "development-tools::debugging"]
readme        = "README.md"
exclude       = [".github/", "benches/"]

[features]
default = ["std"]
std     = ["alloc"]
alloc   = []

[dependencies]
# intentionally empty — this is load-bearing

[dev-dependencies]
static_assertions = "1"
criterion = { version = "0.5", default-features = false }

[[bench]]
name    = "overhead"
harness = false